<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:gravity="center_horizontal"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@color/mildGreen">

        <TextView
            android:id="@+id/eventEditMainHeaderTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Редактирование события"
            android:textColor="@color/white"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="24dp"
            android:textSize="24sp"/>

    </FrameLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textSize="24sp"
        android:text="@string/event_naming"/>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/stillBlue"
        app:cardCornerRadius="8dp">

        <EditText
            android:id="@+id/eventEditEditNameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/stillBlue"
            android:textColor="@color/white"
            android:layout_marginVertical="8dp"
            android:textSize="18sp"
            android:layout_marginHorizontal="16dp" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/date_of_event"
        android:textSize="24sp"/>

    <TextView
        android:id="@+id/eventEditEditDateTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="19.07.2024"
        android:textSize="18sp"
        android:textColor="@color/skyBlue"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/time_of_event"
        android:textSize="24sp"/>

    <TextView
        android:id="@+id/eventEditEditTimeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="16:45"
        android:textSize="18sp"
        android:textColor="@color/skyBlue"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/description_of_event"
        android:textSize="24sp"/>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/stillBlue"
        app:cardCornerRadius="8dp">

        <EditText
            android:id="@+id/eventEditEditDescriptionEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/stillBlue"
            android:textColor="@color/white"
            android:layout_marginVertical="8dp"
            android:lines="4"
            android:textSize="18sp"
            android:layout_marginHorizontal="16dp" />

    </androidx.cardview.widget.CardView>

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_marginStart="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="visible">

        <RadioButton
            android:id="@+id/radioButton1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/in_current_process"
            android:checked="true"/>

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/check_as_visited" />

        <RadioButton
            android:id="@+id/radioButton3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/check_as_skipped"/>
    </RadioGroup>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:backgroundTint="@color/mildGreen"
            android:layout_weight="1"
            android:text="@string/approve_changes"/>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:backgroundTint="@color/skyBlue"
            android:layout_weight="1"
            android:text="@string/escape_without_changes"/>

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="16dp"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:backgroundTint="@color/alertRed"
        android:text="@string/delete_event"
        android:visibility="visible"/>

</LinearLayout>